[UPDATE] Finishing User Services
