# user/common/dto/Role.go
@@ -1,0 +1,6 @@
+package dto
+
+type RequestRole struct {
+	Name  string `json:"name"`
+	Level int    `json:"level"`
+}
